@@ -1,6 +1,15 @@
 # Application template recipe for the rails_apps_composer. Change the recipe here:
 # https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/extras.rb
 
+## QUIET ASSETS
+if config['quiet_assets']
+  prefs[:quiet_assets] = true
+end
+if prefs[:quiet_assets]
+  say_wizard "recipe setting quiet_assets for reduced asset pipeline logging"
+  gem 'quiet_assets', '>= 1.0.1', :group => :development
+end
+
 ## BAN SPIDERS
 if config['ban_spiders']
   prefs[:ban_spiders] = true
@@ -125,6 +134,9 @@ run_after: [gems, init, prelaunch]
 category: other
 
 config:
+  - quiet_assets:
+      type: boolean
+      prompt: Reduce assets logger noise during development?
   - ban_spiders:
       type: boolean
       prompt: Set a robots.txt file to ban spiders?
